adding more html sections

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 
 <head>
+    <!-- meta tags -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content=" the Kaysville city chamber of commerce website assignment for WDD 230">
+    <!-- links -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+    <!-- css stuff -->
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
@@ -15,6 +21,7 @@
 
 <body>
     <h1>Kaysville City Chamber of Commerce</h1>
+    <!-- header section -->
     <header>
         <div class="currentDate">Current Date: <span id="yearNow"></span> </div>
         <img src="images/salt-lake-city.webp" alt="image of a state building"> <!-- this is the placeholder logo-->
@@ -28,9 +35,30 @@
             </nav>
         </ul>
     </header>
+    <!-- main section -->
     <main>
-
+        <section class="hero">
+            <p>Hero with site name and call to action</p>
+        </section>
+        <section class="event">
+            <p>Event</p>
+        </section>
+        <section class="weather">
+            <p>Weather</p>
+        </section>
+        <section class="news">
+            <p>News Release</p>
+        </section>
+        <section class="spotlight">
+            <p>Spotlight 1</p>
+            <p>Spotlight 2</p>
+            <p>Spotlight 3</p>
+        </section>
+        <section class="join">
+            <p>Join</p>
+        </section>
     </main>
+    <!-- footer section -->
     <footer>
         <div class="footer1">&copy; <span id="year1"></span> .:|:. Nick Richards .:|:. Utah</div>
         <div class="footer2">Last Updated: <span id="year2"></span></div>
