--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         Lesson 3
         <a href="lesson3/index.html" class="link">Chamber of Commerce</a>
       </li>
-      <li class="lesson">Lesson 4 <a href="" class="link">Title</a></li>
+      <li class="lesson">Lesson 4 <a href="chamber/index.html" class="link">Chamber Home Page</a></li>
       <li class="lesson">Lesson 5 <a href="" class="link">Title</a></li>
       <li class="lesson">Lesson 6 <a href="" class="link">Title</a></li>
       <li class="lesson">Lesson 7 <a href="" class="link">Title</a></li>
