adding more clear sections and unicode code for map

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -60,9 +60,27 @@
     </main>
     <!-- footer section -->
     <footer>
-        <div class="footer1">&copy; <span id="year1"></span> .:|:. Nick Richards .:|:. Utah</div>
-        <div class="footer2">Last Updated: <span id="year2"></span></div>
-        <script src="scripts/script.js"></script>
+        <!-- section 1 logo and address info -->
+        <section class="logoInfo">
+            <img src="images/salt-lake-city.webp" alt="image of a state building"> <!-- this is the placeholder logo-->
+            <p>Kaysville City Chamber of Commerce</p>
+            <p>23 East Center Street</p>
+            <p> Kaysville, UT 84037</p>
+        </section>
+
+        <!-- section 2 email, phone, map -->
+        <section class="contactInfo">
+            <p>info@Kaysvillecc.org</p>
+            <p>Phone: 801-546-1235</p>
+            <p>&#128506; Location Map</p>
+        </section>
+
+        <!-- bottom footer section -->
+        <section class="bottomFoot">
+            <div class="footer1">&copy; <span id="year"></span> Kaysville City Chamber | Nick Richards | WDD 230 Project
+                | Last Updated:<span id="modded"></span></div>
+            <script src="scripts/script.js"></script>
+        </section>
     </footer>
 </body>
 
