adding images, adding image link in readme, updating html

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -23,15 +23,23 @@
     <h1>Kaysville City Chamber of Commerce</h1>
     <!-- header section -->
     <header>
-        <div class="currentDate">Current Date: <span id="yearNow"></span> </div>
+        <div class="currentDate"><span id="yearNow"></span> </div>
         <img src="images/salt-lake-city.webp" alt="image of a state building"> <!-- this is the placeholder logo-->
+
+        <!-- icons -->
+        <ul class="SocialStuff">
+            <li><a href="https://www.facebook.com/"><img src="images/facebook.png" height="46" width="46" alt="link to facebook website"></a></li>
+            <li><a href="https://www.linkedin.com/"><img src="images/linkedin_icon.webp" height="46" width="46" alt="link to linkedin website"></a></li>
+        </ul>
         <ul>
             <nav>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
+                <a href="">Menu</a>
+                <a href="">Home</a>
+                <a href="">Discover</a>
+                <a href="">Directory</a>
+                <a href="">Join</a>
+                <a href="">Contact</a>
+                
             </nav>
         </ul>
     </header>
