--- a/chamber/index.html
+++ b/chamber/index.html
@@ -23,31 +23,30 @@
     <!-- header section -->
     <header>
         <h1>Kaysville City Chamber of Commerce</h1>
-        <img src="images/salt-lake-city.webp" alt="image of a state building"> <!-- this is the placeholder logo-->
-
-        <!-- icons -->
-        <ul class="SocialStuff">
-            <li><a href="https://www.facebook.com/"><img src="images/facebook.png" height="46" width="46"
-                        alt="link to facebook website"></a></li>
-            <li><a href="https://www.linkedin.com/"><img src="images/linkedin_icon.webp" height="46" width="46"
-                        alt="link to linkedin website"></a></li>
-        </ul>
 
         <!-- navigation bar -->
-        <ul>
-            <nav class="navbar main-navigation">
-                <button onclick="toggleMenu()">&#9776;</button>
-                <ul class="primaryNav">
-                    <li><a class="hamburger" href="#">Menu</a></li>
-                    <li><a class="active" href="">Home</a></li>
-                    <li><a href="">Discover</a></li>
-                    <li><a href="">Directory</a></li>
-                    <li><a href="">Join</a></li>
-                    <li><a href="">Contact</a></li>
-                </ul>
-            </nav>
-            <div class="currentDate"><span id="yearNow"></span> </div>
-        </ul>
+        <nav class="navbar main-navigation">
+            <img src="images/salt-lake-city.webp" alt="image of a state building">
+            <!-- this is the placeholder logo-->
+
+            <!-- <button onclick="toggleMenu()">&#9776;</button> -->
+            <ul class="primaryNav">
+                <li class="nav-item"><a class="hamburger" href="#">Menu</a></li>
+                <li class="nav-item"><a class="active" href="">Home</a></li>
+                <li class="nav-item"><a href="">Discover</a></li>
+                <li class="nav-item"><a href="">Directory</a></li>
+                <li class="nav-item"><a href="">Join</a></li>
+                <li class="nav-item"><a href="">Contact</a></li>
+            </ul>
+            <div class="socialStuff">
+                <!-- icons -->
+                <a href="https://www.facebook.com/"><img src="images/facebook.png" height="46" width="46"
+                        alt="link to facebook website"></a>
+                <a href="https://www.linkedin.com/"><img src="images/linkedin_icon.webp" height="46" width="46"
+                        alt="link to linkedin website"></a>
+            </div>
+        </nav>
+        <div class="currentDate"><span id="yearNow"></span> </div>
     </header>
     <!-- main section -->
     <main>
