--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,7 +29,7 @@
             <img src="images/salt-lake-city.webp" alt="image of a state building">
             <!-- this is the placeholder logo-->
 
-            <!-- <button onclick="toggleMenu()">&#9776;</button> -->
+            <button onclick="toggleMenu()">&#9776;</button>
             <ul class="primaryNav">
                 <li class="nav-item"><a class="hamburger" href="#">Menu</a></li>
                 <li class="nav-item"><a class="active" href="">Home</a></li>
