--- a/chamber/index.html
+++ b/chamber/index.html
@@ -37,7 +37,7 @@
         <!-- navigation bar -->
         <nav class="navbar main-navigation">
 
-            <ul class="primaryNav">
+            <ul id="primaryNav">
                 <button onclick="toggleMenu()">&#9776;</button>
                 <li class="nav-item"><a class="hamburger" href="#">Menu</a></li>
                 <li class="nav-item"><a class="active" href="">Home</a></li>
@@ -92,9 +92,11 @@
 
         <!-- bottom footer section -->
         <section class="bottomFoot">
+            <hr>
             <div class="footer1">&copy; <span id="year"></span> Kaysville City Chamber | Nick Richards | WDD 230 Project
                 | Last Updated:<span id="modded"></span></div>
             <script src="scripts/script.js"></script>
+            <script src="scripts/menu.js"></script>
         </section>
     </footer>
 </body>
