--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content=" the Kaysville city chamber of commerce website assignment for WDD 230">
     <!-- links -->
+    <link rel="shortcut icon" href="images/government-favicon.webp">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
