--- a/lesson4/boom.html
+++ b/lesson4/boom.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/stylesheet.css">
     <title>Document</title>
 </head>
 
@@ -17,10 +18,11 @@
             <button id="button" type="submit">Add Chapter</button> <!-- variable 2-->
         </div>
         <div class="listcontainer">
-            <ul class="list"><!-- variable 3-->
+            <ul id="list"><!-- variable 3-->
             </ul>
         </div>
     </main>
+    <script src="scripts/script.js"></script>
 
 </body>
 
