adding placeholder text

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -54,24 +54,36 @@
     <!-- main section -->
     <main>
         <section class="hero">
-            <p>Hero with site name and call to action</p>
+            <h2>Kaysville City</h2>
+            <img src="images/wasatch-mountain-range-marilyn-h.webp" alt="picture of mountains">
         </section>
         <section class="event">
-            <p>Event</p>
+            <h2>Local Business Walkabout</h2>
+            <h3>Walk around to different local companies</h3>
+            <h3>Meet local business owners</h3>
         </section>
         <section class="weather">
-            <p>Weather</p>
+            <h2>Weather</h2>
+            <h3>Current Temperature</h3>
+            <h3>wind speed</h3>
+            <h3>wind chill</h3>
         </section>
         <section class="news">
-            <p>News Release</p>
+            <h2>Latest News...</h2>
+            <h3>A rabbit on main street regurgitated old man ron's lost shoes. The rabbit was also found to be in great shape and was not hurt.</h3>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" aria-label="link to more article info">Read more...</a>
         </section>
         <section class="spotlight">
-            <p>Spotlight 1</p>
-            <p>Spotlight 2</p>
-            <p>Spotlight 3</p>
+            <h2>Local Coding Group</h2>
+            <a href="https://www.facebook.com/groups/free.code.camp.layton">FreeCodeCamp in Layton UT</a>
+            <h2>Kaysville Library</h2>
+            <a href="https://www.daviscountyutah.gov/library/locations/kaysville-branch">Davis County Library.</a>
+            <h2>Community Programs</h2>
+            <a href="https://www.daviscountyutah.gov/library/programs">check out more stuff here.</a>
         </section>
         <section class="join">
-            <p>Join</p>
+            <h2>Join</h2>
+            <h3>Discover how to join the chamber of commerce and how it will benefit your organization!</h3>
         </section>
     </main>
     <!-- footer section -->
