adding html placeholders, adjusting css, added js logic for banner

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -23,6 +23,7 @@
 <body>
     <!-- header section -->
     <header class="mainHeader">
+        <div id="banner"></div>
         <ul class="headItems">
             <!-- this is the placeholder logo-->
             <img src="images/salt-lake-city.webp" alt="image of a state building">
@@ -54,8 +55,9 @@
     <!-- main section -->
     <main>
         <section class="hero">
-            <h2>Kaysville City</h2>
+            <h2>City of Kaysville</h2>
             <img src="images/wasatch-mountain-range-marilyn-h.webp" alt="picture of mountains">
+            <button>this is a button</button>
         </section>
         <section class="event">
             <h2>Local Business Walkabout</h2>
@@ -70,12 +72,15 @@
         </section>
         <section class="news">
             <h2>Latest News...</h2>
-            <h3>A rabbit on main street regurgitated old man ron's lost shoes. The rabbit was also found to be in great shape and was not hurt.</h3>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" aria-label="link to more article info">Read more...</a>
+            <h3>A rabbit on main street regurgitated old man ron's lost shoes. The rabbit was also found to be in great
+                shape and was not hurt.</h3>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"
+                aria-label="link to more article info">Read more...</a>
         </section>
         <section class="spotlight">
             <h2>Local Coding Group</h2>
-            <a href="https://www.facebook.com/groups/free.code.camp.layton">FreeCodeCamp in Layton UT</a>
+            <a href="https://www.facebook.com/groups/free.code.camp.layton"> <img src="images/programming.webp"
+                    alt="icon that is code" height="90" width="90"></a>
             <h2>Kaysville Library</h2>
             <a href="https://www.daviscountyutah.gov/library/locations/kaysville-branch">Davis County Library.</a>
             <h2>Community Programs</h2>
@@ -89,28 +94,28 @@
     <!-- footer section -->
     <footer>
         <!-- section 1 logo and address info -->
-        <section class="logoInfo">
+        <div class="logoInfo">
             <img src="images/salt-lake-city.webp" alt="image of a state building"> <!-- this is the placeholder logo-->
             <p>Kaysville City Chamber of Commerce</p>
             <p>23 East Center Street</p>
             <p> Kaysville, UT 84037</p>
-        </section>
+        </div>
 
         <!-- section 2 email, phone, map -->
-        <section class="contactInfo">
+        <div class="contactInfo">
             <p>info@Kaysvillecc.org</p>
             <p>Phone: 801-546-1235</p>
             <p>&#128506; Location Map</p>
-        </section>
+        </div>
 
         <!-- bottom footer section -->
-        <section class="bottomFoot">
+        <div class="bottomFoot">
             <hr>
             <div class="footer1">&copy; <span id="year"></span> Kaysville City Chamber | Nick Richards | WDD 230 Project
                 | Last Updated:<span id="modded"></span></div>
             <script src="scripts/script.js"></script>
             <script src="scripts/menu.js"></script>
-        </section>
+        </div>
     </footer>
 </body>
 
