adding inline size

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -26,7 +26,7 @@
         <div id="banner"></div>
         <ul class="headItems">
             <!-- this is the placeholder logo-->
-            <img src="images/salt-lake-city.webp" alt="image of a state building">
+            <img src="images/salt-lake-city.webp" alt="image of a state building" height="64" width="64">
             <h1>Kaysville City Chamber of Commerce</h1>
             <div class="socialStuff">
                 <!-- icons -->
@@ -95,7 +95,7 @@
     <footer>
         <!-- section 1 logo and address info -->
         <div class="logoInfo">
-            <img src="images/salt-lake-city.webp" alt="image of a state building"> <!-- this is the placeholder logo-->
+            <img src="images/salt-lake-city.webp" alt="image of a state building" height="64" width="64"> <!-- this is the placeholder logo-->
             <p>Kaysville City Chamber of Commerce</p>
             <p>23 East Center Street</p>
             <p> Kaysville, UT 84037</p>
