adding comments for me to focus on

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -54,16 +54,20 @@
     </header>
     <!-- main section -->
     <main>
+        <!-- THIS IS THE PICTURE TO CHANGE -->
         <section class="hero">
             <h2>City of Kaysville</h2>
             <img src="images/wasatch-mountain-range-marilyn-h.webp" alt="picture of mountains">
             <button>this is a button</button>
         </section>
+        <!-- END -->
         <section class="event">
             <h2>Local Business Walkabout</h2>
             <h3>Walk around to different local companies</h3>
             <h3>Meet local business owners</h3>
         </section>
+
+        <!-- EDIT THIS PORTION LIKE SOON -->
         <section class="weather">
             <h2>Weather</h2>
         
@@ -74,6 +78,7 @@
             <p> <span id="chill"> wind chill</span>34.6</p>
         
         </section>
+        <!-- LOOK UP, KEEP DOING WORK -->
         <section class="news">
             <h2>Latest News...</h2>
             <h3>A rabbit on main street regurgitated old man ron's lost shoes. The rabbit was also found to be in great
