adjusting flex and display

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -58,13 +58,11 @@
         <section class="hero">
             <h2>City of Kaysville</h2>
             <picture class="heroimg">
-                <source media="(max-width: 200px)"
-                        srcset="images/small-250.webp 250w">
-                <source media="(max-width: 399px)"
-                        srcset="images/medium-400.webp 400w">
-                <source media="(max-width: 599px)"
-                        srcset="images/large-600.webp 600w">
-                <img src="images/wdd230_original_Image.webp" alt="picture of mountains">
+                <source media="(min-width: 1400px)"
+                srcset="images/large.webp ">
+                <source media="(min-width: 900px)"
+                srcset="images/medium.webp ">
+                <img src="images/small.webp" alt="picture of mountains">
             </picture>    
             <button>this is a button</button>
         </section>
