--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <li class="lesson">Lesson 4 <a href="chamber/index.html" class="link">Chamber Home Page</a></li>
       <li class="lesson">Lesson 5 <a href="" class="link">Title</a></li>
       <li class="lesson">Lesson 6 <a href="" class="link">Title</a></li>
-      <li class="lesson">Lesson 7 <a href="" class="link">Title</a></li>
+      <li class="lesson">Lesson 7 <a href="lesson-7/lazyload.html" class="link">Lazy Load Lesson</a></li>
       <li class="lesson">Lesson 8 <a href="" class="link">Title</a></li>
       <li class="lesson">Lesson 9 <a href="" class="link">Title</a></li>
       <li class="lesson">Lesson 10 <a href="" class="link">Title</a></li>
