adding style to images

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -10,13 +10,12 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
-    <script src="scripts/lazyload.js" defer></script>
 
 </head>
 
 <body>
+    <h1>Kaysville City</h1>
     <section class="pictures">
-        <h1>Kaysville City</h1>
         <!-- images need to be 300 x 400 pixels -->
         <picture> <img src="https://via.placeholder.com/300x400" data-src="images/picture-1.webp" alt=""> </picture>
         <picture> <img src="https://via.placeholder.com/300x400" data-src="images/picture-2.webp" alt=""> </picture>
@@ -24,6 +23,7 @@
         <picture> <img src="https://via.placeholder.com/300x400" data-src="images/picture-4.webp" alt=""> </picture>
         <picture> <img src="https://via.placeholder.com/300x400" data-src="images/picture-5.webp" alt=""> </picture>
     </section>
+    <script src="scripts/lazyload.js"></script>
 
 </body>
 
