adding js for localstorage, adjusted css

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -15,15 +15,20 @@
 
 <body>
     <h1>Kaysville City</h1>
+    <p><span class="label"> Number of visits: </span><span class="visits"></span></p>
+    <hr>
+    <p><span class="label"> Days since last visit: </span><span class="nowvisit"></span></p>
+
     <section class="pictures">
         <!-- images need to be 300 x 400 pixels -->
-        <picture> <img src="https://via.placeholder.com/300x400" data-src="images/picture-1.webp" alt=""> </picture>
-        <picture> <img src="https://via.placeholder.com/300x400" data-src="images/picture-2.webp" alt=""> </picture>
-        <picture> <img src="https://via.placeholder.com/300x400" data-src="images/picture-3.webp" alt=""> </picture>
-        <picture> <img src="https://via.placeholder.com/300x400" data-src="images/picture-4.webp" alt=""> </picture>
-        <picture> <img src="https://via.placeholder.com/300x400" data-src="images/picture-5.webp" alt=""> </picture>
+        <figure> <img src="https://via.placeholder.com/1200x627" data-src="images/picture-1.webp" alt=""><figcaption>An elephant at sunset</figcaption> </figure>
+        <figure> <img src="https://via.placeholder.com/1200x627" data-src="images/picture-2.webp" alt=""><figcaption>An elephant at sunset</figcaption> </figure>
+        <figure> <img src="https://via.placeholder.com/1200x627" data-src="images/picture-3.webp" alt=""><figcaption>An elephant at sunset</figcaption> </figure>
+        <figure> <img src="https://via.placeholder.com/1200x627" data-src="images/picture-4.webp" alt=""><figcaption>An elephant at sunset</figcaption> </figure>
+        <figure> <img src="https://via.placeholder.com/1200x627" data-src="images/picture-5.webp" alt=""><figcaption>An elephant at sunset</figcaption> </figure>
     </section>
     <script src="scripts/lazyload.js"></script>
+    <script src="scripts/lastvisit.js"></script>
 
 </body>
 
