--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <li class="lesson">Lesson 5 <a href="" class="link">Title</a></li>
       <li class="lesson">Lesson 6 <a href="" class="link">Title</a></li>
       <li class="lesson">Lesson 7 <a href="lesson-7/lazyload.html" class="link">Lazy Load Lesson</a></li>
-      <li class="lesson">Lesson 8 <a href="" class="link">Title</a></li>
+      <li class="lesson">Lesson 8 <a href="chamber/discover.html" class="link">Discover Page Assignment</a></li>
       <li class="lesson">Lesson 9 <a href="" class="link">Title</a></li>
       <li class="lesson">Lesson 10 <a href="" class="link">Title</a></li>
       <li class="lesson">Lesson 11 <a href="" class="link">Title</a></li>
