adding blur effect on hover and added new class in index

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -21,11 +21,11 @@
 
     <section class="pictures">
         <!-- images need to be 300 x 400 pixels -->
-        <figure> <img src="https://via.placeholder.com/1200x627" data-src="images/picture-1.webp" alt=""><figcaption>An elephant at sunset</figcaption> </figure>
-        <figure> <img src="https://via.placeholder.com/1200x627" data-src="images/picture-2.webp" alt=""><figcaption>An elephant at sunset</figcaption> </figure>
-        <figure> <img src="https://via.placeholder.com/1200x627" data-src="images/picture-3.webp" alt=""><figcaption>An elephant at sunset</figcaption> </figure>
-        <figure> <img src="https://via.placeholder.com/1200x627" data-src="images/picture-4.webp" alt=""><figcaption>An elephant at sunset</figcaption> </figure>
-        <figure> <img src="https://via.placeholder.com/1200x627" data-src="images/picture-5.webp" alt=""><figcaption>An elephant at sunset</figcaption> </figure>
+        <figure> <img class="discover" src="https://via.placeholder.com/1200x627" data-src="images/picture-1.webp" alt=""><figcaption>Image of a river with a mountain</figcaption> </figure>
+        <figure> <img class="discover" src="https://via.placeholder.com/1200x627" data-src="images/picture-2.webp" alt=""><figcaption>Road going through a mountain canyon</figcaption> </figure>
+        <figure> <img class="discover" src="https://via.placeholder.com/1200x627" data-src="images/picture-3.webp" alt=""><figcaption>Iconic mountains in Monument Valley</figcaption> </figure>
+        <figure> <img class="discover" src="https://via.placeholder.com/1200x627" data-src="images/picture-4.webp" alt=""><figcaption>Zion National park in the evening</figcaption> </figure>
+        <figure> <img class="discover" src="https://via.placeholder.com/1200x627" data-src="images/picture-5.webp" alt=""><figcaption>Logan Utah</figcaption> </figure>
     </section>
     <script src="scripts/lazyload.js"></script>
     <script src="scripts/lastvisit.js"></script>
