adding caption and br tags

--- a/lesson-8/tablebuild.html
+++ b/lesson-8/tablebuild.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <section class="table1">
-        <h2>This table below uses TH's for Table Headers.</h2>
         <table>
+        <caption>This table below uses TH's for Table Headers</caption>
           <tr>
             <th>HTML</th>
             <th>CSS</th>
@@ -28,9 +28,10 @@
           </tr>
         </table>
     </section>
+    <br>
     <section class="table2" >
-        <h2>This table below uses TR's for Table Rows</h2>
         <table>
+        <caption>This table below uses TR's for Table Rows</caption>
           <tr>
             <td>Utah</td>
             <td>Washington</td>
