added responsiveness to images and added picture for testing

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -51,7 +51,6 @@
 
             <ul id="primaryNav">
                 <button onclick="toggleMenu()">&#9776;</button>
-                <li class="nav-item"><a class="hamburger" href="#">Menu</a></li>
                 <li class="nav-item"><a class="active" href="">Home</a></li>
                 <li class="nav-item"><a href="">Discover</a></li>
                 <li class="nav-item"><a href="">Directory</a></li>
@@ -76,6 +75,7 @@
         <figure> <img class="discover" src="https://via.placeholder.com/1200x627" data-src="images/picture-5.webp" width="1200" height="627" alt=""><figcaption>Logan Utah</figcaption> </figure>
     </section>
     <script src="scripts/lazyload.js"></script>
+    <script src="scripts/menu.js"></script>
     <script src="scripts/lastvisit.js"></script>
 
 </body>
