correcting table values, adjusting css

--- a/lesson-8/tablebuild.html
+++ b/lesson-8/tablebuild.html
@@ -11,36 +11,33 @@
     <section class="table1">
         <table>
         <caption>This table below uses TH's for Table Headers</caption>
-          <tr>
-            <th>HTML</th>
-            <th>CSS</th>
-            <th>JavaScript</th>
+          <th class="header" colspan="2">Sales</th>
+          <tr class="thead">
+            <th>Month</th>
+            <th>Amount</th>
+          </tr>
+          <tr class="data" >
+            <td>July</td>
+            <td>$3,000</td>
+          </tr>
+          <tr class="data" >
+            <td>August</td>
+            <td class="greenlight">$8,000</td>
+          </tr>
+          <tr class="data" >
+            <td>September</td>
+            <td>$4,870</td>
+          </tr>
+          <tr class="data" >
+            <td>October</td>
+            <td>$8,610</td>
+          </tr>
+          <tr class="data" >
+            <td>November</td>
+            <td>$2,000</td>
           </tr>
           <tr>
-            <td>Initial Release</td>
-            <td>Age</td>
-            <td>Current Version</td>
-          </tr>
-          <tr>
-            <td>1993</td>
-            <td>25 Years</td>
-            <td>ES2015</td>
-          </tr>
-        </table>
-    </section>
-    <br>
-    <section class="table2" >
-        <table>
-        <caption>This table below uses TR's for Table Rows</caption>
-          <tr>
-            <td>Utah</td>
-            <td>Washington</td>
-            <td>Oregon</td>
-          </tr>
-          <tr>
-            <td>Salt Lake City</td>
-            <td>Olympia</td>
-            <td>Portland</td>
+            <td class="foot" colspan="2" >Table 1: Wasatch Sales</td>
           </tr>
         </table>
     </section>
